--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dev: ^1.0.0
   firebase_core: ^2.27.1
   firebase_messaging: ^14.7.20
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
