--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.27.1
   firebase_messaging: ^14.7.20
   flutter_local_notifications: ^17.0.0
+  firebase_analytics: ^10.8.10
 
 dev_dependencies:
   flutter_test:
